# nes-starter-kit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  build.sh  example_compile_flags.txt  run_emulator.cmake  set_build_flags.cmake
chr/: CMakeLists.txt  chr.s  make_chr.py
config/: CMakeLists.txt  config.s
src/: explosion.cpp  explosion.hpp  main.cpp
